chore: rename module name (#11)

--- a/services/message-service/pom.xml
+++ b/services/message-service/pom.xml
@@ -17,7 +17,7 @@
 
     <modules>
         <module>application</module>
-        <module>common</module>
+        <module>commons</module>
         <module>configuration</module>
         <module>core</module>
         <module>persistence</module>
