--- a/docker/apps.yml
+++ b/docker/apps.yml
@@ -297,6 +297,28 @@ services:
     networks:
       - pcforum_network
 
+
+  gateway-service:
+    image: dawid0604/pcforum-gateway-service-application
+    container_name: gateway-service
+    environment:
+      - CONFIG_SERVICE_INSTANCE=config-service
+      - CONFIG_SERVICE_PORT=${CONFIG_SERVICE_PORT}
+      - DISCOVERY_SERVICE_INSTANCE=discovery-service
+      - DISCOVERY_SERVICE_PORT=${DISCOVERY_SERVICE_PORT}
+      - GATEWAY_SERVICE_PORT=${GATEWAY_SERVICE_PORT}
+      - GATEWAY_SERVICE_INSTANCE=gateway-service
+    restart: unless-stopped
+    depends_on:
+      config-service:
+        condition: service_healthy
+
+      discovery-service:
+        condition: service_healthy
+
+    networks:
+      - pcforum_network
+
 networks:
   pcforum_network:
     driver: bridge
