--- a/docker/apps.override.yml
+++ b/docker/apps.override.yml
@@ -22,6 +22,13 @@ services:
     networks:
       - pcforum_network
 
+  frontend-service:
+    ports:
+      - "${FRONTEND_SERVICE_PORT}:${FRONTEND_SERVICE_PORT}"
+
+    networks:
+      - pcforum_network
+
 networks:
   pcforum_network:
     driver: bridge
