--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,9 @@
 		<eureka.client.version>2.0.5</eureka.client.version>
 		<spring.cloud.starter.netflix.eureka.client.version>4.3.0</spring.cloud.starter.netflix.eureka.client.version>
 		<git.commit.id.maven.plugin.version>9.0.2</git.commit.id.maven.plugin.version>
+		<jsr305.version>3.0.2</jsr305.version>
+		<commons.configuration.version>1.10</commons.configuration.version>
+		<archaius-core.version>0.7.7</archaius-core.version>
 	</properties>
 
 	<modules>
@@ -119,19 +122,19 @@
 			<dependency>
 				<groupId>com.google.code.findbugs</groupId>
 				<artifactId>jsr305</artifactId>
-				<version>3.0.2</version>
+				<version>${jsr305.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>commons-configuration</groupId>
 				<artifactId>commons-configuration</artifactId>
-				<version>1.10</version>
+				<version>${commons.configuration.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.netflix.archaius</groupId>
 				<artifactId>archaius-core</artifactId>
-				<version>0.7.7</version>
+				<version>${archaius-core.version}</version>
 			</dependency>
 
 			<dependency>
